- modify swagger - allow all origins (enable CORS)
