# docs/swagger.json
@@ -1,13 +1,16 @@
 {
+    "schemes": [
+        "https",
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
-        "description": "Ini adalah API untuk sistem kasir sederhana (Belajar Golang).",
+        "description": "Ini adalah API untuk sistem kasir sederhana.",
         "title": "Kasir API",
         "contact": {},
         "version": "1.0"
     },
-    "host": "",
-    "basePath": "/",
+    "host": "kasir-api-production-1064.up.railway.app",
     "paths": {
         "/api/category": {
             "get": {
